# dogent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  QUICK_START.md  README.md  package.json  pyproject.toml  requirements.md
dev/: changelog.md  issue.md  issues.md  package.md  refactory.md  requirement.md  requirements.md  sprint_design.md  sprint_plan.md  sprint_uat.md  uat_plan.md
dev/archives/: requirement.md  sprint_design.md  sprint_plan.md  uat_plan.md
dev/spikes/: cli-markdown-copy-paste.md  cli-markdown-edit-preview.md  cli-markdown-editor.md  cli-markdown-vi.md  cli-meaningless-char.md  image_generate.md  markdown_to_docx_with_template.md  pdf_css.md  structure-format-message.md  vision-model.md
docs/: .gitignore  01-quickstart.md  02-templates.md  03-editor.md  04-document-export.md  05-lessons.md  06-history-and-state.md  07-commands.md  08-configuration.md  09-permissions.md  10-claude-compatibility.md  11-troubleshooting.md  12-appendix.md  design-reference.md  design.md  doc_convert.md  dogent_design.md  draft.md  example_usage.md  implementation_plan.md  process-record.md  requirements.md  todo.md  usage.md  web_tools_design.md
dogent/: __init__.py  agent.py  clarification.py  cli.py  commands.py  config.py  doc_templates.py  document_io.py  document_tools.py  file_refs.py  history.py  init_wizard.py  lesson_drafter.py  lessons.py  outline_edit.py  paths.py  prompts.py  session_log.py  terminal.py  todo.py  tool_permissions.py  vision.py  vision_tools.py  web_tools.py
dogent/agent/: __init__.py  permissions.py  runner.py  wait.py
dogent/cli/: __init__.py  app.py  claude_commands.py  editor.py  (+3 more)
test/: test-cli.js  test-simple.mjs  test-system.js
tests/: test_agent_display.py  test_archive_command.py  test_authorizations.py  test_clarification.py  test_clarification_agent.py  test_clarification_cli.py  test_claude_commands.py  test_clean_command.py  test_clear_command.py  test_cli_completer.py  test_cli_confirmations.py  test_cli_edit.py  test_cli_editor_completion.py  test_cli_exit.py  test_cli_init_flow.py  test_cli_input.py  test_cli_interrupt.py  test_cli_learn.py  test_cli_multiline_editor.py  test_cli_outline_edit.py  test_cli_permissions.py  test_cli_profile_debug.py  test_cli_prompt_mode.py  test_cli_template_override.py  test_command_history.py  test_commands.py  test_config.py  test_context.py  test_dependency_flow.py  test_dependency_manager.py  test_doc_templates.py  test_document_io.py  test_guidelines.py  test_help_and_tools.py  test_history_command.py  test_image_generation.py  test_init_wizard.py  test_lessons.py  test_markdown_editor_utils.py  test_outline_edit.py  (+14 more)
uats/: uat_guild.md
(+92 files in other folders)
