[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dogent"
version = "0.9.6"
description = "CLI-based interactive document-writing agent powered by the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dogent Team"}]
dependencies = [
    "claude-agent-sdk>=0.1.17",
    "markdown-it-py>=3.0.0",
    "openpyxl>=3.1.2",
    "playwright>=1.46.0",
    "pymupdf>=1.24.0",
    "pypandoc>=1.13",
    "rich>=14.2.0",
    "prompt_toolkit>=3.0.52",
]

[project.scripts]
dogent = "dogent.cli:main"

[tool.setuptools]
packages = ["dogent"]
include-package-data = true

[tool.setuptools.package-data]
dogent = [
  "prompts/*.md",
  "templates/*.md",
  "templates/*.json",
  "templates/doc_templates/*.md",
]
