[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dogent"
version = "0.9.15"
description = "CLI-based interactive document-writing agent powered by the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dogent Team"}]
dependencies = [
    "claude-agent-sdk>=0.1.19",
    "jsonschema>=4.21.0",
    "markdown-it-py>=3.0.0",
    "openpyxl>=3.1.2",
    "playwright>=1.46.0",
    "pygments>=2.17.0",
    "pymupdf>=1.24.0",
    "pypandoc>=1.13",
    "pyperclip>=1.8.2",
    "rich>=14.2.0",
    "prompt_toolkit>=3.0.52",
]

[project.scripts]
dogent = "dogent.cli:main"

[tool.setuptools]
packages = ["dogent", "dogent.agent", "dogent.cli", "dogent.config", "dogent.core", "dogent.features"]
include-package-data = true

[tool.setuptools.package-data]
dogent = [
  "prompts/*.md",
  "resources/*.md",
  "resources/*.json",
  "resources/*.css",
  "resources/tools/**",
  "templates/*.md",
  "schema/*.json",
  "schema/*/*.json",
]
